--- a/app/views/list.scala.html
+++ b/app/views/list.scala.html
@@ -1,4 +1,5 @@
-@(message: String)
+@import services._
+@(items: Seq[Todo])
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +7,20 @@
 </head>
 <body>
     <section>
-        @message
+        <table>
+            <thead>
+                <tr>
+                    <th>名前</th>
+                </tr>
+            </thead>
+            <tbody>
+                @items.map { todo =>
+                    <tr>
+                        <td>@todo.name</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     </section>
 </body>
 </html>
