--- a/app/views/list.scala.html
+++ b/app/views/list.scala.html
@@ -21,6 +21,7 @@
                 }
             </tbody>
         </table>
+        <a href="/todo/new" class="btn btn-primary">新規登録</a>
     </section>
 </body>
 </html>
